--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@zeit/next-sass": "^1.0.1",
     "next": "^8.0.1",
+    "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "sass-docs": "node-sass -w -r ./src/styles/ -o ./docs/css/",
+    "sass": "node-sass ./styles/ -o ./dist/css/ -w -r --source-map-embed --source-map-contents --output-style expanded | node-sass ./styles/main.scss ./dist/css/main.min.css -w --output-style compressed"
   }
 }
