--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "fosto",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/Razatastic/fosto.git",
-  "author": "Ahmad Raza <raza2157@gmail.com>",
-  "license": "MIT",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@zeit/next-sass": "^1.0.1",
-    "next": "^8.0.1",
-    "node-sass": "^4.11.0",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "antd": "^3.15.0",
+    "babel-plugin-import": "^1.11.0",
+    "customize-cra": "^0.2.12",
+    "react": "^16.8.4",
+    "react-app-rewired": "^2.1.0",
+    "react-dom": "^16.8.4",
+    "react-scripts": "2.1.8"
   },
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  }
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
