--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.gitignore.io/api/git,node,sass,macos,gitbook,windows,firebase,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=git,node,sass,macos,gitbook,windows,firebase,visualstudiocode
+# Created by https://www.gitignore.io/api/git,node,macos,gitbook,windows,firebase,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=git,node,macos,gitbook,windows,firebase,visualstudiocode
 
 ### Firebase ###
 .idea
@@ -152,12 +152,6 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
-### Sass ###
-.sass-cache/
-*.css.map
-*.sass.map
-*.scss.map
-
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -194,4 +188,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/git,node,sass,macos,gitbook,windows,firebase,visualstudiocode
+# End of https://www.gitignore.io/api/git,node,macos,gitbook,windows,firebase,visualstudiocode
