--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.15.0",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.4",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.4",
