--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "antd": "^3.15.0",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
-    "firebase": "^5.9.2",
+    "firebase": "^5.10.0",
     "google-maps-react": "^2.0.2",
+    "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.4",
     "react-infinite-scroller": "^1.2.4",
+    "react-redux": "5.1.1",
+    "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-firestore": "^0.7.3",
+    "redux-thunk": "^2.3.0",
     "reqwest": "^2.0.5"
   },
   "scripts": {
