--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
   "name": "fosto",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "antd": "^3.15.0",
-    "babel-plugin-import": "^1.11.0",
-    "customize-cra": "^0.2.12",
+    "bootstrap": "^4.3.1",
     "firebase": "^5.10.0",
-    "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
-    "react": "^16.8.4",
-    "react-app-rewired": "^2.1.0",
-    "react-dom": "^16.8.4",
-    "react-infinite-scroller": "^1.2.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "5.1.1",
     "react-redux-firebase": "^2.2.6",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-spring": "^8.0.19",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-firestore": "^0.7.3",
-    "redux-thunk": "^2.3.0",
-    "reqwest": "^2.0.5"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
