Updated local dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "cSpell.words": [
-        "antd",
-        "fosto",
-        "logo",
-        "submenu"
-    ]
+  "cSpell.words": ["dropdown", "fosto", "logo", "reactstrap", "uncontrolled"]
 }
