--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-geosuggest": "^2.12.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
