--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@react-google-maps/api": "^1.2.3-alpha.5",
     "bootstrap": "^4.3.1",
     "firebase": "^5.10.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-geosuggest": "^2.12.0",
-    "react-google-maps": "^9.4.5",
     "react-redux": "5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
