--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/git,node,macos,gitbook,windows,firebase,visualstudiocode
+sendgrid.env
