--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "dependencies": {
     "@react-google-maps/api": "^1.2.3-alpha.5",
+    "@sendgrid/mail": "^6.3.1",
     "bootstrap": "^4.3.1",
     "firebase": "^5.10.0",
     "moment": "^2.24.0",
