--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-search-box": "^2.0.1",
     "react-spring": "^8.0.19",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
